# jadt2026-typical-source-estimation

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.researchflow/: artifacts.toml  events.tsv  project.toml  relations.toml
configs/: wns_jadt_preprocessing.ini
data/: README.md
data/toy/: toy_emoji.tsv  toy_lexical.tsv
docs/: data_access.md  reproduction_plan.md  simulation_provenance.md
scripts/: README.md  compare_lexical_inputs.py  consolidate_simulation.py  prepare_wns_emoji_tsv.py  prepare_wns_lexical_tsv.py  prepare_wns_posts_tsv.py  reproduce_emoji_table.py  reproduce_lexical_tables.py  reproduce_simulation.py
src/typical_source_estimation/: __init__.py  data.py  estimators.py  metrics.py  simulation.py  source_summary.py  tables.py  wns.py
tests/: conftest.py  test_compare_lexical_inputs.py  test_data.py  test_estimators.py  test_metrics.py  test_reproduction_scripts.py  test_simulation.py  test_source_summary.py  test_wns.py
tests/fixtures/wns_xml/: wns_chat_01.xml
