[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jadt2026-typical-source-estimation"
version = "0.1.0"
description = "Reproduction package for typical-source estimation in imbalanced corpora (JADT 2026)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Aris Xanthos"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "emoji>=2.10,<3",
  "lxml>=5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
